--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,16 @@ on:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
+        image:
+          - 'swift:5.4'
+          - 'swift:5.5'
+          - 'swift:5.6'
+          - 'swift:5.7'
     container:
-      image: 'swift:5.7'
+      image: ${{ matrix.image }}
     steps:
     - name: Checkout
       uses: actions/checkout@v3
