--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,16 +4,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        image:
-          - 'swift:5.4'
-          - 'swift:5.5'
-          - 'swift:5.6'
-          - 'swift:5.7'
-    container:
-      image: ${{ matrix.image }}
     steps:
+    - uses: swift-actions/setup-swift@v1
     - name: Checkout
       uses: actions/checkout@v3
     - name: Install Node.js
