--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        swift: ["5.5", "5.6", "5.7"]
     steps:
     - uses: swift-actions/setup-swift@v1
+      with:
+        swift-version: ${{ matrix.swift }}
     - name: Checkout
       uses: actions/checkout@v3
     - name: Install Node.js
@@ -13,5 +18,6 @@ jobs:
       with:
         node-version: 16.x
     - run: npm install
+    - run: npm run package
     - run: |
         xvfb-run -a npm test
