--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        swift: ["5.5", "5.6", "5.7"]
+        swift: ["5.7"]
     steps:
     - uses: swift-actions/setup-swift@v1
       with:
