--- a/package.json
+++ b/package.json
@@ -460,7 +460,7 @@
         "properties": {
           "swift.debugger.debugAdapter": {
             "type": "string",
-            "default": "Toolchain",
+            "default": "CodeLLDB",
             "enum": [
               "Toolchain",
               "CodeLLDB"
